# paperradarai_bot

./: .gitignore  README.md  fix_dashboard.py  pyproject.toml  requirements.txt  smoke_test.py
paperradar/: __init__.py  config.py  logging_setup.py
paperradar/bot/: commands_diag.py  commands_export.py  commands_feedback.py  commands_jobs.py  commands_llm.py  commands_misc.py  commands_poll.py  commands_profiles.py  commands_status.py  commands_ticknow.py  commands_tuning.py  handlers.py  handlers_docs.py  main.py  scheduler.py  utils.py
paperradar/core/: filters.py  llm.py  model.py  ranking.py
paperradar/fetchers/: arxiv.py  crossref.py  journals_crossref.py  merge.py  scholar.py  search_terms.py  semantic_scholar.py  springer.py
paperradar/services/: embeddings.py  journal_ingest.py  journal_search.py  paper_embeddings.py  pipeline.py  profile_builder.py
paperradar/storage/: email_index.py  history.py  journal_analysis.py  journals.py  known_chats.py  list_users.py  magic_links.py  paper_embeddings.py  paths.py  users.py
paperradar/web/: api.py  main.py
paperradar/web/static/: app.js  profiles.js  styles.css  ui.js
paperradar/web/templates/: index.html  magic_login.html  profiles.html
