[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperradar"
version = "0.1.0"
description = "PaperRadar: Telegram bot + FastAPI for paper discovery with TF-IDF ranking and optional LLM bullets."
authors = [{name="JP & ChatGPT"}]
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = [""]
include = ["paperradar*"]
